--- a/index.html
+++ b/index.html
@@ -4,37 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
-    <title>Homepage</title>
+    <title>Six Strings</title>
   </head>
   <body>
-    <header><nav class="navbar is-light" role="navigation" aria-label="main navigation">
-  <div class="navbar-start">
-    <div class="navbar-item has-text-weight-bold">
-      <img alt="six-strings" loading="lazy" decoding="async" src="/img/PxuMx3Tzt2-200.png" width="1937" height="2665" srcset="/img/PxuMx3Tzt2-200.png 200w, /img/PxuMx3Tzt2-1937.png 1937w" sizes="(min-width: 30em) 50vw, 100vw">
-    </div>
-  </div>
-  <div class="navbar-end">
-    <a href="/" class="navbar-item">
-      Vineyard
-    </a>
-    <a href="/about" class="navbar-item">
-      About
-    </a>
-    <a href="/buy" class="navbar-item">
-      Buy wine
-    </a>
-  </div>
-</nav></header>
-    <main>
+    <section class="hero is-large">
+      <div class="hero-head">
+                    <nav class="navbar">
+          <div class="container">
+            <div class="navbar-brand">
+              <a class="navbar-item">
+                
+              </a>
+            </div>
+            <div id="navbarMenuHeroB" class="navbar-menu">
+              <div class="navbar-end">
+                <a href="/" class="navbar-item">
+                  Vineyard
+                </a>
+                <a href="/about" class="navbar-item">
+                  About
+                </a>
+                <a href="/buy" class="navbar-item">
+                  Buy wine
+                </a>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </div>
+
       
-<section class="hero is-medium is-primary is-bold">
-  <div class="hero-body">
-    <div class="container">
-      <h1 class="title">Six Strings</h1>
-      <h2 class="subtitle">Wine is the music that fills the cup of silence...</h2>
+<div class="hero-body" style="background-image: url('/img/vines-wide.png'); opacity:0.8;">>
+    <div class="has-text-centered">
+      <img src="/img/logo.png" width="300px" style="margin-top:-200px;">      
+      <h1 class="subtitle">Wine is the music that fills the cup of silence...</h1>
     </div>
-  </div>
-</section>
-    </main>
+</div>
+
+
+
+      <div class="hero-foot"></div>
+    </section>
   </body>
 </html>
