--- a/about/index.html
+++ b/about/index.html
@@ -7,27 +7,33 @@
     <title>About us</title>
   </head>
   <body>
-    <header><nav class="navbar is-light" role="navigation" aria-label="main navigation">
-  <div class="navbar-start">
-    <div class="navbar-item has-text-weight-bold">
-      <img alt="six-strings" loading="lazy" decoding="async" src="/img/PxuMx3Tzt2-200.png" width="1937" height="2665" srcset="/img/PxuMx3Tzt2-200.png 200w, /img/PxuMx3Tzt2-1937.png 1937w" sizes="(min-width: 30em) 50vw, 100vw">
-    </div>
-  </div>
-  <div class="navbar-end">
-    <a href="/" class="navbar-item">
-      Vineyard
-    </a>
-    <a href="/about" class="navbar-item">
-      About
-    </a>
-    <a href="/buy" class="navbar-item">
-      Buy wine
-    </a>
-  </div>
-</nav></header>
-    <main>
-      
-<article class="page-layout">
+    <section class="hero is-large">
+      <div class="hero-head">
+                    <nav class="navbar">
+          <div class="container">
+            <div class="navbar-brand">
+              <a class="navbar-item">
+                
+              </a>
+            </div>
+            <div id="navbarMenuHeroB" class="navbar-menu">
+              <div class="navbar-end">
+                <a href="/" class="navbar-item">
+                  Vineyard
+                </a>
+                <a href="/about" class="navbar-item">
+                  About
+                </a>
+                <a href="/buy" class="navbar-item">
+                  Buy wine
+                </a>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </div>
+
+      <article class="page-layout">
   <div class="container">
     <div class="columns">
       <div class="column is-8 is-offset-2">
@@ -40,6 +46,8 @@
     </div>
   </div>
 </article>
-    </main>
+
+      <div class="hero-foot"></div>
+    </section>
   </body>
 </html>
