--- a/about/index.html
+++ b/about/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mr De Haviland">
     <title>About us</title>
   </head>
   <body>
@@ -18,14 +19,12 @@
             </div>
             <div id="navbarMenuHeroB" class="navbar-menu">
               <div class="navbar-end">
-                <a href="/" class="navbar-item">
-                  Vineyard
-                </a>
-                <a href="/about" class="navbar-item">
-                  About
-                </a>
+                
                 <a href="/buy" class="navbar-item">
-                  Buy wine
+                  Shop
+                </a>
+                <a href="/contact" class="navbar-item">
+                  Contact Us
                 </a>
               </div>
             </div>
