--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mr De Haviland">
     <title>Six Strings</title>
   </head>
   <body>
@@ -18,14 +19,12 @@
             </div>
             <div id="navbarMenuHeroB" class="navbar-menu">
               <div class="navbar-end">
-                <a href="/" class="navbar-item">
-                  Vineyard
-                </a>
-                <a href="/about" class="navbar-item">
-                  About
-                </a>
+                
                 <a href="/buy" class="navbar-item">
-                  Buy wine
+                  Shop
+                </a>
+                <a href="/contact" class="navbar-item">
+                  Contact Us
                 </a>
               </div>
             </div>
@@ -34,11 +33,10 @@
       </div>
 
       
-<div class="hero-body" style="background-image: url('/img/vines-wide.png'); opacity:0.8;">>
-    <div class="has-text-centered">
-      <img src="/img/logo.png" width="300px" style="margin-top:-200px;">      
-      <h1 class="subtitle">Wine is the music that fills the cup of silence...</h1>
-    </div>
+<img class="hero-img" src='/img/vines-background.png' />
+<div class="logo-display" >
+  <img src="/img/logo-gold.png">      
+  <h1 class="subtitle">Break the Silence...</h1>
 </div>
 
 
