--- a/about/index.html
+++ b/about/index.html
@@ -19,12 +19,17 @@
             </div>
             <div id="navbarMenuHeroB" class="navbar-menu">
               <div class="navbar-end">
-                
+                <a href="/" class="navbar-item">
+                  HOME
+                </a>
+                <a href="/about" class="navbar-item">
+                  ABOUT
+                </a>
                 <a href="/buy" class="navbar-item">
-                  Shop
+                  SHOP
                 </a>
                 <a href="/contact" class="navbar-item">
-                  Contact Us
+                  CONTACT
                 </a>
               </div>
             </div>
