--- a/index.html
+++ b/index.html
@@ -19,12 +19,17 @@
             </div>
             <div id="navbarMenuHeroB" class="navbar-menu">
               <div class="navbar-end">
-                
+                <a href="/" class="navbar-item">
+                  HOME
+                </a>
+                <a href="/about" class="navbar-item">
+                  ABOUT
+                </a>
                 <a href="/buy" class="navbar-item">
-                  Shop
+                  SHOP
                 </a>
                 <a href="/contact" class="navbar-item">
-                  Contact Us
+                  CONTACT
                 </a>
               </div>
             </div>
@@ -35,7 +40,7 @@
       
 <img class="hero-img" src='/img/vines-background.png' />
 <div class="logo-display" >
-  <img src="/img/logo-gold.png">      
+  <img src="/img/logo-black.png">      
   <h1 class="subtitle">Break the Silence...</h1>
 </div>
 
