--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
                 <a href="/" class="navbar-item">
                   HOME
                 </a>
-                <a href="/about" class="navbar-item">
-                  ABOUT
-                </a>
+                
                 <a href="/buy" class="navbar-item">
                   SHOP
                 </a>
                 <a href="/contact" class="navbar-item">
                   CONTACT
+                </a>
+                <a href="https://www.facebook.com" class="navbar-item">
+                  <img src="/img/f_logo_RGB-White_58.png" style="width: 58px; max-height: none; max-width: none;" >
                 </a>
               </div>
             </div>
