--- a/buy/index.html
+++ b/buy/index.html
@@ -22,14 +22,15 @@
                 <a href="/" class="navbar-item">
                   HOME
                 </a>
-                <a href="/about" class="navbar-item">
-                  ABOUT
-                </a>
+                
                 <a href="/buy" class="navbar-item">
                   SHOP
                 </a>
                 <a href="/contact" class="navbar-item">
                   CONTACT
+                </a>
+                <a href="https://www.facebook.com" class="navbar-item">
+                  <img src="/img/f_logo_RGB-White_58.png" style="width: 58px; max-height: none; max-width: none;" >
                 </a>
               </div>
             </div>
@@ -71,45 +72,54 @@
 </tr>
 </tbody>
 </table>
-<p>Place an order below and we will e-mail you an invoice with freight costs and payment details</p>
-<div class="shop-details">
-    <div class="row">
-        <span class="label">Name</span>
-        <input type="text" id="name" />
+<p><span class="form-instructions">Place an order below and we will e-mail you an invoice with freight costs and payment details</span></p>
+<div class="form-section">
+    <div class="form-details">
+        <div class="row">
+            <span class="label">Name</span>
+            <input type="text" id="name" />
+        </div>
+        <div class="row">
+            <span class="label">E-mail</span>
+            <input type="email" id="email" />
+        </div>
+        <div class="row">
+            <span class="label">Phone</span>
+            <input type="tel" id="phone" />
+        </div>
+        <div class="row">
+            <span class="label">Bottles</span>
+            <input type="number" id="bottles" />
+        </div>
+        <div class="row">
+            <span class="label">Comments</span>
+            <input type="text" id="comments" />
+        </div>
+        <div class="row form-submit" id="submit">Purchase</div>
+        <br />
     </div>
-    <div class="row">
-        <span class="label">E-mail</span>
-        <input type="email" id="email" />
-    </div>
-    <div class="row">
-        <span class="label">Phone</span>
-        <input type="tel" id="phone" />
-    </div>
-    <div class="row">
-        <span class="label">Bottles</span>
-        <input type="number" id="bottles" />
-    </div>
-    <div class="row">
-        <span class="label">Comments</span>
-        <input type="text" id="comments" />
-    </div>
-    <div class="row shop-submit" id="submit">Purchase</div>
-    <br />
-</div>
-<div class=>
 </div>
 <script type="text/javascript">
-    document.getElementById('submit').onclick= async function(){
+    let form = document.getElementsByClassName('form-details')[0]
+    document.getElementById('submit').onclick = async function(){
+        document.getElementsByClassName('form-instructions')[0].classList.add('hidden');
+        document.getElementById('submit').onclick = null;
         let paylod = {
-             name: document.getElementById('name').value, 
+            name: document.getElementById('name').value, 
              email: document.getElementById('email').value,
              phone: document.getElementById('phone').value,
              quantity: document.getElementById('bottles').value,
              comments: document.getElementById('comments').value
             }
+        document.getElementsByClassName('form-details')[0].classList.add('no-border');
+        form.innerHTML = '<div class="busy"></div>';
         let resp = await fetch('https://u-sws.in/six-strings/contact', {method:'POST', body: JSON.stringify(paylod), mode: 'cors'})
-        console.log(resp.ok);
-}
+        if (resp.ok) {
+            form.innerHTML = '<div><p>Your details have been successfully submitted.</p><p>We wil be in touch shortly.</p></div>'
+        } else {
+            form.innerHTML = '<div><p>An error has occured while processing your details.</p><p>Please check your details and try again.</p></div>'
+        }   
+    }
 </script>
 <style>
     table {
