--- a/contact/index.html
+++ b/contact/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mr De Haviland">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Indie Flower">
     <title>Contact Us</title>
   </head>
   <body>
